syntax = "proto3";
package com.temas.aimaster;

import public "common.proto";

message TargetInfo {
    Vector2 position = 1;
    Vector2 moveDir = 2;
    float radius = 3;
    float speed = 4;
}

message StoneInfo {
    int32 playerId = 1;
    int32 id = 2;
    Vector2 position = 3;
    Vector2 velocity = 4;
}

enum PlayerType {
    RED = 0;
    BLUE = 1;
}

message PlayerInfo {
    int32 playerId = 1;
    PlayerType type = 2;
    string name = 3;
    int32 score = 4;
}

message GameInfo {
    map<int32, PlayerInfo> playersInfo = 1;
    int32 wonPlayer = 2;
}

message ModelType {
    int64 timestamp = 1;
    int64 lastPackId = 2;
    TargetInfo targetInfo = 3;
    repeated StoneInfo stones = 4;
}

