syntax = "proto3";
package com.temas.aimaster;


message Vector2 {
    float x = 1;
    float y = 2;
}